[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.22", "pybind11-stubgen","pyarrow>=10.0.1,<11"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["python/tests"]

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"

before-all = [
    "yum install -y wget bzip2-devel libffi-devel zlib-devel perl-IPC-Cmd perl-Test-Simple",
]

build-verbosity = 0
environment = "CMAKE_ARGS_F=/tmp/cmake_args"

before-build = [
    # Removing the contents of previous builds, if they exist
    "rm -rf {project}/CMakeCache.txt {project}/build {project}/CMakeFiles.txt {project}/_deps",

    "wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh",
    "chmod +x Miniconda3-latest-Linux-x86_64.sh",
    "echo -e '\nyes\n\nyes' | bash ./Miniconda3-latest-Linux-x86_64.sh",
    "rm -f Miniconda3-latest-Linux-x86_64.sh",
    "export PATH='~/miniconda3/bin:/usr/bin:$PATH'",
    "~/miniconda3/bin/conda init",
    "source ~/.bashrc || true",

    "pip install conan==1.60.1 cmake pyarrow==10.0.1 auditwheel",
    "export PYST=$(python -c 'import site; print(site.getsitepackages()[0])')",

    "conan profile new --detect default",
    "conan profile update settings.compiler=gcc default",
    "conan profile update settings.compiler.version=12 default",
    "conan profile update settings.compiler.libcxx=libstdc++11 default",
    
    "wget -q https://github.com/gurgenyegoryan/ustore-conan/releases/download/v0.1.8/ustore_deps_x86_linux.tar.gz",
    "tar -xzvf {project}/ustore_deps_x86_linux.tar.gz -C ~/.conan",
    "conan install ustore_deps/0.12.1@unum/x86_linux -g cmake",
    "rm -rf {project}/ustore_deps_x86_linux.tar.gz",

    "echo \"-DCMAKE_BUILD_TYPE=Release -DPYARROW_DIR=${PYST}/pyarrow/\" > ${CMAKE_ARGS_F}",
    "mkdir -p build/ustore",
]

skip = ["*musllinux*", "*i686*", "pp*", "cp36-*"]

# test-command = "pytest {project}/python/tests/"
# test-requires = ["pandas"]
# test-extras = ["test"]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair --lib-sdir . -w {dest_dir} {wheel}"